courses/430_programming-languages/assignment-6/tests/error/hw4_error20.nex
var a : none; var b : none;
print "should not get here:n";
1 / 0;
a - b;
